# AutoCitationAgent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
cases/: draft.tex  references.bib
src/: main.py
src/auto_citation_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/graph/: build_graph.py  prompts.py  state.py
src/graph/nodes/: anchor.py  gen_queries.py  human_review.py  ingest.py  insert.py  needs_citation.py  parse_existing_cites.py  rank_filter.py  references.py  report.py  search.py  segment.py  synthesize.py
src/tools/: bibtex_io.py  caching.py  crossref.py  dedupe.py  latex_utils.py  llm.py  logger.py  perplexity.py  semantic_scholar.py  text_utils.py
tests/: test_insert.py  test_text_utils.py
